[package]
name = "tuc"
version = "0.1.0"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "tuc"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "1.0.89"
async-channel = "2.3.1"
esp-idf-svc = { version = "0.49.1", default-features = false }
futures-lite = "2.3.0"
log = { version = "0.4.22", default-features = false }
ron = "0.8.1"
time = { version = "0.3.36" }

executor = { git = "https://github.com/ippras-blc/executor" }
timed = { git = "https://github.com/ippras-blc/timed", features = ["serde"] }
sntp = { git = "https://github.com/ippras-blc/sntp" }
wifi = { git = "https://github.com/ippras-blc/wifi" }

led = { git = "https://github.com/ippras-blc/led" }
turbidimeter = { git = "https://github.com/ippras-blc/turbidimeter" }

[build-dependencies]
embuild = "0.32.0"
